--- a/.env.example
+++ b/.env.example
@@ -70,9 +70,9 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 #API MERCADO PAGO
-MERCADO_PAGO_ACCESS_TOKEN=TOKEN DO MERCADO PAGO
+MERCADO_PAGO_ACCESS_TOKEN="TOKEN_DO_MERCADO_PAGO"
 
-MERCADO_PAGO_NOTIFICATION_URL=URL DO N8N CASO TENHA
+MERCADO_PAGO_NOTIFICATION_URL="URL_DO_N8N_CASO_TENHA"
 
 #URL PARA A SUA LOGOMARCA
 LOGO_IMAGE_URL="http://localhost:8000/assets/images/logo-donaco-completo.png"
