--- a/.env.example
+++ b/.env.example
@@ -22,15 +22,16 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 #uso local
-#DB_CONNECTION=sqlite
+DB_CONNECTION=sqlite
+DB_DATABASE=database/database.sqlite
 
 #uso em produção
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=seu_banco
-DB_USERNAME=root
-DB_PASSWORD=sua_senha
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=seu_banco
+#DB_USERNAME=root
+#DB_PASSWORD=sua_senha
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
