add feature pix manual

--- a/.env.example
+++ b/.env.example
@@ -83,3 +83,12 @@ LOGO_IMAGE_ADMIN_PAINEL_URL="http://localhost:8000/assets/images/logo-donaco-com
 LOGO_ICON_URL="http://localhost:8000/assets/images/logo-donaco-ico.png"
 
 LOGO_IMAGE_HEADER_URL="http://localhost:8000/assets/images/logo-donaco-sem-ico.png"
+
+# Configurações de verificação de pagamento (em milissegundos)
+PAYMENT_CHECK_INTERVAL=5000
+PAYMENT_CHECK_MAX_TIME=300000
+
+# Dados PIX Manual
+PIX_KEY="Chave PIX"
+PIX_BANK="Nome do Banco"
+PIX_BENEFICIARY="Nome do Beneficiário"
