MANUAL_PAYMENT_MODE .env

--- a/.env.example
+++ b/.env.example
@@ -88,6 +88,9 @@ LOGO_IMAGE_HEADER_URL="http://localhost:8000/assets/images/logo-donaco-sem-ico.p
 PAYMENT_CHECK_INTERVAL=5000
 PAYMENT_CHECK_MAX_TIME=300000
 
+#Ativar ou desativar o modo de pagamento manual
+MANUAL_PAYMENT_MODE=false
+
 # Dados PIX Manual
 PIX_KEY="Chave PIX"
 PIX_BANK="Nome do Banco"
