feat: implementado qr code para aparecer no modal de doação de pix manual

--- a/.env.example
+++ b/.env.example
@@ -95,3 +95,4 @@ MANUAL_PAYMENT_MODE=false
 PIX_KEY="Chave PIX"
 PIX_BANK="Nome do Banco"
 PIX_BENEFICIARY="Nome do Beneficiário"
+PIX_BENEFICIARY_CITY="Cidade"
