--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        },
-        "files": [
-            "app/Helpers/DonationHelper.php"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
@@ -53,7 +50,8 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
-        ]
+        ],
+        "format": "vendor/bin/pint"
     },
     "extra": {
         "laravel": {
