feat: implementado validação nsfw em comprovante de doação manual

--- a/.env.example
+++ b/.env.example
@@ -91,8 +91,16 @@ PAYMENT_CHECK_MAX_TIME=300000
 #Ativar ou desativar o modo de pagamento manual
 MANUAL_PAYMENT_MODE=false
 
+#Ativar ou desativar a validação NSFW no comprovante de doação manual
+MANUAL_PAYMENT_MODE_VALIDATION=false
+
 # Dados PIX Manual
 PIX_KEY="Chave PIX"
 PIX_BANK="Nome do Banco"
 PIX_BENEFICIARY="Nome do Beneficiário"
 PIX_BENEFICIARY_CITY="Cidade"
+
+SIGHT_ENGINE_MODELS="nudity-2.1,gore-2.0"
+SIGHT_API_URL="https://api.sightengine.com/1.0/check.json"
+SIGHT_API_USER=
+SIGHT_API_SECRET=
